--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -2,11 +2,13 @@
     display: flex;
     justify-content: flex-end;
     padding: 30px;
-    width: 100%;
-    top: -1;
-
+    width: 99%;
 }
 .nav a {
     padding-right: 1.5em;
     font-weight: 500;
+    text-decoration: none;
+}
+.nav a:hover {
+    font-weight: 700;
 }
