--- a/src/components/CountryCard/countrycard.css
+++ b/src/components/CountryCard/countrycard.css
@@ -1,7 +1,16 @@
 .countryCard {
-    /* border: 3px solid red; */
-    margin: 10px;
+    border: 3px solid red; 
+    margin-bottom: 30px;
+    width: 28%;
+}
+.countryCard a {
+    text-decoration: none;
 }
 .flag-img {
-    height: 80px;
+    height: auto;
+    width: 100%;
+}
+button {
+    margin-bottom:0px;
+    display: inline-block;
 }
