--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,20 @@
-body {
-  margin: 0;
+* {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #0b5394;
+}
+
+body {
+  margin: 0;
   padding: 2em;
+  background-color: #f5f9ff;
 }
 
 img {
-  border-radius: 7px;
+  border-radius: 8px;
 }
 
 code {
