--- a/src/pages/Countries/countries.css
+++ b/src/pages/Countries/countries.css
@@ -2,24 +2,35 @@
     display: flex;
     width: 100%;
 }
+
 #searchbar {
     padding: 15px;
     border-radius: 10px;
     margin-right: 1em;
     width: 50em;
-    border: 2px solid lightgray
+    border: 1px solid lightgray;
 }
+
+#searchbar:hover {
+    background-color: #f2f2f2;
+}
+
 #region-selector {
     padding: 15px;
     border-radius: 10px;
     width: 20em;
     margin-right: 20px;
-    border: 2px solid lightgray
+    border: 1px solid lightgray;
 }
+
+#region-selector:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+}
+
 .cardGrid {
     display: flex;
     flex-flow: row wrap;
-    border: 2px solid blue;
     margin-top: 1.5em;
-    justify-content: space-around;
+    justify-content: space-between;
 }
