--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -4,6 +4,37 @@
     align-items: center;
     margin-top: 15vh;
 }
+
 h1 {
     font-size: 4.5em;
 }
+
+#app {
+    height: 25vh;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+    border: 2px solid green;
+}
+
+.swiper-slide {
+    text-align: center;
+    background: #fff;
+    display: flex;
+    border: 1px solid red;
+}
+
+/* .swiper-slide button {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+} */
+  
+  /* .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  } */
